@@ -1,7 +1,7 @@
 Package: Uniquorn
 Title: Identification of cancer cell lines based on their weighted
         mutational/ variational fingerprint
-Version: 2.3.6
+Version: 2.3.7
 Authors@R: person("Raik", "Otto", email = "raik.otto@hu-berlin.de", role = c("aut", "cre"))
 Description: This packages enables users to identify cancer cell lines. Cancer cell line misidentification and 
  cross-contamination reprents a significant challenge for cancer researchers. 
@@ -18,7 +18,7 @@ Depends: R (>= 3.5)
 License: Artistic-2.0
 Type: Package
 Maintainer: 'Raik Otto' <raik.otto@hu-berlin.de>
-Date: 2022-02-22
+Date: 2022-03-22
 Author: Raik Otto
 RoxygenNote: 7.1.2
 NeedsCompilation: no
