@@ -40,25 +40,40 @@ You will find a file with the ending '_uniquorn_identification.tab' next to the 
 
 # 2 Add CCLE and CoSMIC CLP CL data
 
-Please add the CCLE and CoSMIC CLP Cancer Cell Line (CL) data manually due to legal regulations! Else only the vanilla 60 CellMiner CLs will be available for identification. You can however manually add custom CLs.
+Please add the CCLE and COSMIC CLP Cancer Cell Line (CL) data manually due to legal regulations! Else only the vanilla 60 CellMiner CLs will be available for identification. You can, however, manually add custom CLs.
 
-'CosmicCLP_MutantExport.tsv.gz', unpack with e.g. gunzip on linux or 7zip on windows from http://cancer.sanger.ac.uk/cell_lines
-As of October the eights 2018, this is the first file listed, i.e. on top. If you cannot find the file, search for its name.
+### Current release (CCLE: DepMap Public 22Q1; COSMIC: v95)
 
-Important: utilizing the correct reference genome version is of utmost importance. In case of Cosmic CLP, ascertain that the websites' reference genome version is correctly set.
+'CosmicMutantExport.tsv.gz', unpack with e.g. gunzip on linux or 7zip on windows from http://cancer.sanger.ac.uk/cell_lines/download. Registration for the website is without charge and not complicated.
 
-'CCLE_hybrid_capture1650_hg19_NoCommonSNPs_NoNeutralVariants_CDS_2012.05.07.maf' from http://www.broadinstitute.org/ccle
-You can find this file in the 'hybrid capture' subsection
+'CCLE_mutations.csv' and 'sample_info.csv' from https://depmap.org/portal/download/all/
+
+`initiate_canonical_databases(cosmic_file = 'path/to/cosmic/CosmicMutantExport.tsv',
+                              ccle_file = 'path/to/ccle/CCLE_mutations.csv',
+                              ccle_sample_file = 'path/to/sample_info/sample_info.csv',
+                              ref_gen = 'GRCH38')`
+
+Once the initialization succeeds, about 2000 cancer cell line training sample for about 1200 different cancer cell lines are available in the Uniquorn's database.
+
+Note: Currently (March 2022), the COSMIC and CCLE data are available for the reference Genome versio GRCh38. It is neccesary, that the reference genome for the training samples is specified if the version is not GRCh37.
+
+### Older releases
+
+Note: The mentioned COSMIC and CCLE files are obsolescent and are not compatible with the current version of Uniquorn (2.3.7).   
+
+'CosmicCLP_MutantExport.tsv.gz', unpack with e.g. gunzip on linux or 7zip on windows from http://cancer.sanger.ac.uk/cell_lines/download
+
+'CCLE_hybrid_capture1650_hg19_NoCommonSNPs_NoNeutralVariants_CDS_2012.05.07.maf' from https://portals.broadinstitute.org/ccle/data under Legacy Data -> Hybrid capture sequencing.
 
 Registration for both websites is without charge and not complicated.
 
-`initiate_canonical_databases( ccle_file = 'path_to_ccle/CCLE_hybrid_capture1650_hg19_NoCommonSNPs_NoNeutralVariants_CDS_2012.05.07.maf', cosmic_file = 'path_to_cosmic/CosmicCLP_MutantExport.tsv.gz', ref_gen = "GRCH37")`
+`initiate_canonical_databases(ccle_file = 'path_to_ccle/CCLE_hybrid_capture1650_hg19_NoCommonSNPs_NoNeutralVariants_CDS_2012.05.07.maf', cosmic_file = 'path_to_cosmic/CosmicCLP_MutantExport.tsv.gz', ref_gen = "GRCH37")`
 
-One the initialization succeeds, about 2000 cancer cell line training sample for about 1200 different cancer cell lines are available in the Uniquorn's database.
+Once the initialization succeeds, about 2000 cancer cell line training sample for about 1200 different cancer cell lines are available in the Uniquorn's database.
 
-Note: Currently (January 2016), only the CoSMIC CLP data is available for the reference Genome version GRCh38. It is neccesary, that the reference genome for the training samples is specified if the version is not GRCh37
+Note: The CoSMIC CLP data is available for the reference Genome version GRCh38. It is neccesary, that the reference genome for the training samples is specified if the version is not GRCh37.
 
-`initiate_canonical_databases( ccle_file = 'path_to_ccle/CCLE_hybrid_capture1650_hg19_NoCommonSNPs_NoNeutralVariants_CDS_2012.05.07.maf', cosmic_file = 'path_to_cosmic/CosmicCLP_MutantExport.tsv.gz', ref_gen = "GRCH38" )`
+`initiate_canonical_databases(ccle_file = 'path_to_ccle/CCLE_hybrid_capture1650_hg19_NoCommonSNPs_NoNeutralVariants_CDS_2012.05.07.maf', cosmic_file = 'path_to_cosmic/CosmicCLP_MutantExport.tsv.gz', ref_gen = "GRCH38")`
 
 # 3 Add training CCL samples & utility functions
 
